<resources>
    <string name="app_name">Retrofit</string>
    <string name="search">Enter id</string>
    <string name="getAllPosts">GET ALL</string>
    <string name="getByQuery">QUERY</string>
    <string name="post">POST</string>
    <string name="edit">EDIT</string>
    <string name="home">Home</string>
    <string name="LearnMore">Learn More</string>
    <string name="developer">Developed By Sam O.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="PostsByQuery">Posts By Query</string>
    <string name="id">ID</string>
    <string name="userId">User ID</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="onFailure">SORRY, FAILED TO FETCH DATA</string>
    <string name="postId">Post Id</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="enterPostId">Enter Post Id</string>
    <string name="enterUserId">Enter UserId*</string>
    <string name="enterBody">Enter Body Text</string>
    <string name="enterTitle">Enter Title</string>
    <string name="result">RESULTS</string>
    <string name="updateUserId">Update UserId</string>
    <string name="updateTitle">Update Title</string>
    <string name="updateText">Update Body</string>
    <string name="pickId">Select Id: </string>

    <!--    Array list for the spinner values.-->
    <string-array name="id_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>