<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?colorPrimary"
    tools:context=".adapter.UpdateAdapter">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:background="?colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/bubblegum_sans"
            android:text="@string/id"
            android:textColor="#fff"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/idView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedgeinput"
            android:backgroundTint="@color/white"
            android:padding="5dp"
            android:textColor="#000"
            android:textSize="15dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout1"
        android:layout_marginTop="2dp"
        android:layout_marginRight="10dp"
        android:background="?colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/bubblegum_sans"
            android:text="@string/userId"
            android:textColor="#fff"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/userIdView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedgeinput"
            android:backgroundTint="@color/white"
            android:padding="5dp"
            android:textColor="#000"
            android:textSize="15dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout2"
        android:layout_marginTop="2dp"
        android:layout_marginRight="10dp"
        android:background="?colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/bubblegum_sans"
            android:text="@string/title"
            android:textColor="#fff"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/titleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedgeinput"
            android:backgroundTint="@color/white"
            android:padding="5dp"
            android:textColor="#000"
            android:textSize="15dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout3"
        android:layout_marginTop="2dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="?colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/bubblegum_sans"
            android:text="@string/body"
            android:textColor="#fff"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/bodyView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedgeinput"
            android:backgroundTint="@color/white"
            android:padding="5dp"
            android:textColor="#000"
            android:textSize="15dp" />
    </LinearLayout>

</RelativeLayout>