<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".PostsActivity"
    tools:openDrawer="start">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/my_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:elevation="4dp"
                android:theme="@style/ToolbarTheme"
                app:popupTheme="@style/ToolbarTheme" />

            <ImageView
                android:id="@+id/retrofitImage"
                android:layout_width="wrap_content"
                android:layout_height="187dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="0dp"
                android:src="@drawable/ic_baseline_cloud_upload_24" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userIdPost"
                style="@style/TextLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enterUserId"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textColor="#0E0E0E"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titlePost"
                style="@style/TextLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enterTitle"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="#0E0E0E"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/bodyPost"
                style="@style/TextLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enterBody"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="#0E0E0E"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/post_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="25dp"
                android:backgroundTint="#f1631e"
                android:fontFamily="@font/bubblegum_sans"
                android:text="@string/post"
                android:textColor="#fff"
                android:textSize="25sp" />
        </LinearLayout>

    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#f1631e"
        app:headerLayout="@layout/nav_header"
        app:itemTextColor="#fff"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>