<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateFragment">

    <ScrollView
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/retrofitImage"
                android:layout_width="wrap_content"
                android:layout_height="137dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="0dp"
                android:src="@drawable/ic_baseline_cloud_done_24" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bubblegum_sans"
                    android:text="@string/pickId"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/idList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userIdPost"
                style="@style/TextLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/updateUserId"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textColor="#0E0E0E"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titlePost"
                style="@style/TextLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/updateTitle"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="#0E0E0E"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/bodyPost"
                style="@style/TextLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/updateText"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="#0E0E0E"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout0"
                android:layout_marginBottom="9dp"
                android:gravity="bottom|right"
                android:orientation="vertical">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/delete_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:backgroundTint="#F44335"
                    android:elevation="5dp"
                    android:foregroundGravity="right"
                    android:gravity="right"
                    android:src="@drawable/ic_baseline_delete_24" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/update_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:backgroundTint="#3CAF50"
                    android:elevation="5dp"
                    android:gravity="left"
                    android:src="@drawable/ic_baseline_done_24" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>